<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.musicallens.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_camera"
            app:destination="@id/navigation_camera" />

        <action
            android:id="@+id/action_navigation_home_to_navigation_tutorial"
            app:destination="@id/navigation_tutorial" />

        <action
            android:id="@+id/action_navigation_home_to_displayData"
            app:destination="@id/displayData" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />

    </fragment>

    <fragment
        android:id="@+id/navigation_tutorial"
        android:name="com.example.musicallens.ui.tutorial.TutorialFragment"
        android:label="@string/title_tutorial"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.musicallens.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_navigation_favorites_to_displayData"
            app:destination="@id/displayData" />
    </fragment>



    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.musicallens.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_imgProcessFragment"
            app:destination="@id/imgProcessFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.musicallens.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/imgProcessFragment"
        android:name="com.example.musicallens.ui.img_process.ImgProcessFragment"
        android:label="@string/title_img_process"
        tools:layout="@layout/fragment_img_process" >
        <action
            android:id="@+id/action_imgProcessFragment_to_cropped_img"
            app:destination="@id/cropped_img" />
    </fragment>

    <fragment
        android:id="@+id/cropped_img"
        android:name="com.example.musicallens.ui.img_process.CroppedImage"
        android:label="@string/title_crop"
        tools:layout="@layout/fragment_cropped_image" >
        <action
            android:id="@+id/action_cropped_img_to_displayData"
            app:destination="@id/displayData" />
    </fragment>

    <fragment
        android:id="@+id/displayData"
        android:name="com.example.musicallens.ui.data.DisplayDataFragment"
        android:label="fragment_data"
        tools:layout="@layout/fragment_data_display" >
        <argument
            android:name="folderName"
            app:argType="string" />
    </fragment>

</navigation>