<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.data.DisplayDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md_theme_tertiary"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/partituraNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_partitura_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/md_theme_onTertiary"
            android:ellipsize="end"
            android:singleLine="true"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/addImagesButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:id="@+id/addImagesButton"
            android:layout_width="37dp"
            android:layout_height="35dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:color="@color/md_theme_onTertiary"
            android:contentDescription="@string/add_images_button_description"
            android:src="@drawable/baseline_add_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/md_theme_background"
        app:layout_constraintTop_toBottomOf="@+id/topBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/musicxml_title" android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/md_theme_onTertiary"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicXmlRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="4"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cropped_images_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/md_theme_onTertiary"
                android:paddingTop="16dp"
                android:paddingBottom="8dp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="6" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>