<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!-- Search Bar -->
    <SearchView
        android:id="@+id/search_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- First Card (Icons) -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="352dp"
        android:layout_height="120dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="-70dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/card_previous_files"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="3"
            android:background="@color/md_theme_tertiary">

            <!-- Saved Files -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="Saved Files"
                    android:src="@drawable/ic_baseline_save_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:text="@string/title_saved_files"
                    android:textSize="14sp"
                    android:textColor="@color/md_theme_onTertiary"/>
            </LinearLayout>

            <!-- Favorites -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="Favorites"
                    android:src="@drawable/ic_favorite_border_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:text="@string/title_favorites"
                    android:textSize="14sp"
                    android:textColor="@color/md_theme_onTertiary" />
            </LinearLayout>

            <!-- Tutorial -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="Tutorial"
                    android:src="@drawable/ic_question_mark_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="4dp"
                    android:text="@string/title_tutorial"
                    android:textSize="14sp"
                    android:textColor="@color/md_theme_onTertiary" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Second Card (Previous Files) -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_previous_files"
        android:layout_width="352dp"
        android:layout_height="418dp"
        android:layout_marginHorizontal="16dp"
        android:translationY="100dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:weightSum="3"
            android:background="@color/md_theme_tertiary"
            app:layout_constraintBottom_toTopOf="@+id/nav_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recent_files"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/md_theme_onTertiary" />

            <LinearLayout
                android:outlineAmbientShadowColor="@color/md_theme_tertiary"
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:src="@drawable/ic_baseline_file_24" />

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:src="@drawable/ic_baseline_file_24" />

                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:src="@drawable/ic_baseline_file_24" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <!-- Bottom Navigation -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <!--    android:background="@color/md_theme_secondaryContainer"-->
</androidx.constraintlayout.widget.ConstraintLayout>
